[project]
name = "multiagentsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "beautifulsoup4>=4.15.0",
    "groq>=0.37.1",
    "html5lib>=1.1",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "lxml>=6.1.1",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "tenacity>=9.1.4",
]
